overflow fix in admin panel

--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -12,6 +12,10 @@
   height: 48px;
 }
 
+.sub-galleries-container {
+  overflow: auto;
+}
+
 .image {
   max-width: 100px;
   max-height: 120px;
